--- a/Translation/vn.json
+++ b/Translation/vn.json
@@ -1,5 +1,33 @@
 {
   "vn": {
-    "Bypass Success": "Bypass Thành Công",
+    "Article Hub - Slap Battles": "Trung tâm bài viết - Trận chiến tát",
+    "Bypass Success": "Bypass thành công",
+    "You cannot bypass, you must be careful": "Bypass ko thành công, cần thận đấy",
+    "Up To You": "Tùy bạn",
+    "SafeSpotBox 1.0": "Chỗ an toàn v1.0",
+    "SafeSpotBox 2.0": "Chỗ an toàn v2.0",
+    
+    "Info": "Thông tin",
+    "Script": "Kích bản",
+    "Anti": "Chống",
+    "Badges": "Huy hiệu",
+    "Local": "Địa phương",
+    "Misc": "Lặt vặt",
+    "Gloves Optional": "Glove tùy chọn",
+    
+    "Your Fps": "Fps của bạn",
+    "Your Ping": "Ping của bạn",
+    "Player In Server": "Người chơi trong server",
+    "Server Time": "Server thời gian",
+    "Now Time": "Bây giờ",
+    "Country": "Quốc gia",
+    "City": "Thành phố",
+    
+    "Good Morning": "Chào buổi sáng",
+    "Good Afternoon": "Chào buổi chiều",
+    "Good Evening": "Buổi tối vui vẻ",
+    "Good Night": "Chúc ngủ ngon",
+    
+    "You Account Age": "Tuổi tài khoản của bạn",
   }
 }
